src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Acronym__c</fullName>
        <inlineHelpText>The organization&apos;s acronym, abbreviation or nickname</inlineHelpText>
        <label>Acronym</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Donor_Advised_Funds__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that a foundation or other funder provides this type of funding</inlineHelpText>
        <label>Donor Advised Funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endowment__c</fullName>
        <inlineHelpText>This account has/is an endowment</inlineHelpText>
        <label>Endowment</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstCloseDate__c</fullName>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Maximum__c</fullName>
        <label>Funding Maximum</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Minimum__c</fullName>
        <label>Funding Minimum</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funding Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grant_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used this to indicate that an Org (especially a non-foundation) gives grants</inlineHelpText>
        <label>Grant Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Interest__c</fullName>
        <inlineHelpText>Select those issues that this org is working on or funds (choose as many as apply)</inlineHelpText>
        <label>Issue Interest</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastCloseDate__c</fullName>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastMembershipDate__c</fullName>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastMembershipLevel__c</fullName>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastMembershipOrigin__c</fullName>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matches_Gifts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matches Gifts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <label>Media Type</label>
        <picklist>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MembershipEndDate__c</fullName>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MembershipJoinDate__c</fullName>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <formula>if (  MembershipEndDate__c  &lt;today(), if ( MembershipEndDate__c  &gt; ( TODAY() - 31 )  , &quot;Grace Period&quot; , &quot;Expired&quot;) , if(isnull(MembershipEndDate__c ),&quot;&quot;,&quot;Current&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfClosedOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfMembershipOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Membership Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppAmount2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Two Years Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppAmountLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Last 365 Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppAmountLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Last Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Last 365 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Sub_Type__c</fullName>
        <label>Organization Sub-Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Community Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State/Prov Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <inlineHelpText>Our primary contact person for this Organization</inlineHelpText>
        <label>Primary Org Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orgs for Primary Contact</relationshipLabel>
        <relationshipName>Orgs_Primary_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Org_Contact_Title__c</fullName>
        <formula>Primary_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Org Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standing_Grant_Proposal_Date__c</fullName>
        <inlineHelpText>Note here if the org has a consistent yearly date or dates when grant proposals are due</inlineHelpText>
        <label>Standing Grant Proposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standing_LOI_Date__c</fullName>
        <inlineHelpText>Note here if the org has a consistent yearly due date or dates for LOI&apos;s</inlineHelpText>
        <label>Standing LOI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOrganizations</fullName>
        <filterScope>Everything</filterScope>
        <label>All Organizations</label>
    </listViews>
    <listViews>
        <fullName>Donor_Organizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>LastCloseDate__c</columns>
        <columns>OppAmountLastNDays__c</columns>
        <columns>TotalOppAmount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TotalOppAmount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Donor Organizations</label>
    </listViews>
    <listViews>
        <fullName>MyOrganizations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Organizations</label>
    </listViews>
</CustomObject>